--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@react-three/drei": "^9.111.3",
     "@react-three/fiber": "^8.17.5",
+    "@react-three/postprocessing": "^2.16.3",
     "lamina": "^1.1.23",
     "next": "14.2.5",
+    "postprocessing": "^6.36.3",
     "react": "^18",
     "react-dom": "^18",
     "three": "^0.167.1",
