--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@react-three/drei": "^9.111.3",
     "@react-three/fiber": "^8.17.5",
     "@react-three/postprocessing": "^2.16.3",
+    "@types/ua-parser-js": "^0.7.39",
     "lamina": "^1.1.23",
     "next": "14.2.5",
     "postprocessing": "^6.36.3",
     "react": "^18",
     "react-dom": "^18",
     "three": "^0.167.1",
+    "ua-parser-js": "^1.0.39",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
