--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postprocessing": "^6.36.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-draggable": "^4.4.6",
     "three": "^0.167.1",
     "zustand": "^4.5.5"
   },
