--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^9.111.3",
     "@react-three/fiber": "^8.17.5",
     "@react-three/postprocessing": "^2.16.3",
+    "firebase": "^11.1.0",
     "lamina": "^1.1.23",
     "next": "14.2.5",
     "postprocessing": "^6.36.3",
