--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/fiber": "^8.17.5",
     "@react-three/postprocessing": "^2.16.3",
     "firebase": "^11.1.0",
+    "framer-motion": "^12.4.7",
     "lamina": "^1.1.23",
     "next": "14.2.5",
     "postprocessing": "^6.36.3",
